svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  selector:
    app: backemd-multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 9004
      targetPort: 8080
