svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  selector:
    app: front-nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 9003
      targetPort: 80
